--- a/14-01-2024/create-form-app/pytest.ini
+++ b/14-01-2024/create-form-app/pytest.ini
@@ -6,3 +6,4 @@ markers =
     login: Marker for login testing
     form:Marker for form creation testing
     existing_data:Marker for testing registration with existing_data
+    connection: marks tests as requiring a database connection
